--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -68,6 +68,11 @@
             left: 25vw;
             box-shadow: 0px 0px 62px -13px rgba(173, 173, 173, 1);
             overflow-y: scroll;
+
+            @media (max-width: $mobile) {
+                width: 90vw;
+                left: 5vw;
+            }
         }
 
         .modal-close {
